Fix line breaks in shows

--- a/src/scss/modules/shows.scss
+++ b/src/scss/modules/shows.scss
@@ -34,7 +34,6 @@
     @include font-huge;
     display: block;
     @include mq($from: phablet) {
-        white-space: nowrap;
-        display: inline;
+        display: inline-block;
     }
 }
